--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -2,6 +2,6 @@ AM_CFLAGS = @TANG_CFLAGS@ @libcrypto_CFLAGS@
 
 check_PROGRAMS = keyd
 
-keyd_LDADD = ../libclt.a ../libcore.a @libcrypto_LIBS@
+keyd_LDADD = ../libclt.a ../core/libcore.a @libcrypto_LIBS@
 
 TESTS = $(check_PROGRAMS)
