--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,6 @@
 AM_CFLAGS = @TANG_CFLAGS@ @libcrypto_CFLAGS@
 
 check_PROGRAMS = keyd
-
-keyd_LDADD = ../libclt.a ../core/libcore.a @libcrypto_LIBS@
-
 TESTS = $(check_PROGRAMS)
+
+keyd_LDADD = ../src/clt/libclt.la @libcrypto_LIBS@
