Reformulate key management metadata
Don't use extended attributes. They don't work on some filesystems.
Instead, the key use is the file extension and the advertisement
is controlled using a leading '.': if the file is hidden in the
filesystem, it isn't advertised to clients. Futher, the filenames
are now based on timestamps rather than random data.

This allows key management to be done with simple and obvious
file management techniques. Thus, we can retire tang-key-mod.

Additionally, tang-key-groups is now subsumed inside tang-key-gen.

--- a/src/srv/Makefile.am
+++ b/src/srv/Makefile.am
@@ -3,7 +3,7 @@ tangdir = $(localstatedir)/$(PACKAGE_NAME)
 AM_CFLAGS = @TANG_CFLAGS@ @libcrypto_CFLAGS@ -DTANG_DB=\"$(tangdir)\"
 LIBS = ../libcore.la
 
-bin_PROGRAMS = tang-key-gen tang-key-mod tang-key-groups
+bin_PROGRAMS = tang-key-gen
 
 systemdsystemunit_DATA = tang-keyd.socket tang-keyd.service
 EXTRA_DIST = tang-keyd.socket.in tang-keyd.service.in
