Install the dracut module to the right directory

--- a/src/clt/luks/askp/Makefile.am
+++ b/src/clt/luks/askp/Makefile.am
@@ -1,8 +1,10 @@
 EXTRA_DIST = module-setup.sh.in tang-luks-askpassd.path.in tang-luks-askpassd.service.in
 CLEANFILES = module-setup.sh tang-luks-askpassd.path tang-luks-askpassd.service
 
+tangmoddir = $(dracutmodulesdir)/60tang
+
 systemdsystemunit_DATA = tang-luks-askpassd.path tang-luks-askpassd.service
-dracutmodules_SCRIPTS = module-setup.sh
+tangmod_SCRIPTS = module-setup.sh
 
 noinst_LTLIBRARIES = libaskp.la
 libaskp_la_SOURCES = question.c question.h iface.c iface.h askp.c askp.h
