Rewrite tang into a small HTTP server using JOSE
The client utilities have moved to the clevis project. This project now
contains only a small data binding server.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,6 @@
-SUBDIRS = src tests
-EXTRA_DIST = COPYING COPYING.openssl
+SUBDIRS = src
+
+check_PROGRAMS = tests/benchmark
+tests_benchmark_CFLAGS = -pthread
+TESTS = tests/adv tests/rec tests/bench
+EXTRA_DIST = COPYING $(TESTS)
