Drop socket handling code for inet format
This basically allows us to drop the systemd dependency (we still use it
for tests, however). We no longer support UDP natively. We're also slow.
However, we can scale up by putting Tang behind another webserver on a
UNIX socket. Another benefit is that we no longer need anything else on
RHEL 7 (besides jose, of course).

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,4 @@
 SUBDIRS = src
 
-check_PROGRAMS = tests/benchmark
-tests_benchmark_CFLAGS = -pthread
-TESTS = tests/adv tests/rec tests/bench
+TESTS = tests/adv tests/rec
 EXTRA_DIST = COPYING $(TESTS)
