--- a/src/tangd.service.in
+++ b/src/tangd.service.in
@@ -3,4 +3,6 @@ Description=Tang daemon
 ConditionDirectoryNotEmpty=@tangdbdir@/keys
 
 [Service]
+StandardInput=socket
+StandardOutput=socket
 ExecStart=@libexecdir@/tangd @plugindir@/dbdir.so @tangdbdir@/keys @plugindir@/bldir.so @tangdbdir@/blst
