--- a/configure.ac
+++ b/configure.ac
@@ -21,11 +21,13 @@ AC_CHECK_LIB([http_parser], [http_parser_execute],
 	       [AC_SUBST(http_parser_LIBS, [-lhttp_parser])],
 	       [AC_MSG_ERROR([http-parser required!])])
 
-PKG_CHECK_MODULES([jose], [jose >= 4])
-PKG_CHECK_MODULES([jose_zlib], [jose-zlib >= 4])
-PKG_CHECK_MODULES([jose_openssl], [jose-openssl >= 4])
+PKG_CHECK_MODULES([jose_zlib], [jose-zlib >= 5])
+PKG_CHECK_MODULES([jose_openssl], [jose-openssl >= 5])
 
-AC_SUBST([systemdsystemunitdir], [${prefix}/lib/systemd/system])
+
+PKG_CHECK_MODULES([systemd], [systemd],
+		  [AC_SUBST([systemdsystemunitdir], [$($PKG_CONFIG --variable=systemdsystemunitdir systemd)])],
+		  [AC_SUBST([systemdsystemunitdir], [${prefix}/lib/systemd/system])])
 
 TANG_CFLAGS="\
 -Wall \
