Detect systemd-socket-activate in configure

--- a/configure.ac
+++ b/configure.ac
@@ -38,6 +38,22 @@ AC_ARG_WITH([systemdsystemunitdir],
 
 AC_SUBST([systemdsystemunitdir], [$with_systemdsystemunitdir])
 
+for ac_prog in systemd-socket-activate systemd-activate; do
+    AC_CHECK_PROG([SD_ACTIVATE], [$ac_prog], [$as_dir/$ac_prog], [],
+		  [$PATH$PATH_SEPARATOR$($PKG_CONFIG --variable=systemdutildir systemd)])
+    test -n "$SD_ACTIVATE" && break
+done
+
+test -n "$SD_ACTIVATE" || AC_MSG_ERROR([systemd-socket-activate required!])
+
+AC_MSG_CHECKING([systemd-socket-activate inetd flag])
+if $SD_ACTIVATE --help | grep -q inetd; then
+    SD_ACTIVATE="$SD_ACTIVATE --inetd"
+    AC_MSG_RESULT([--inetd])
+    AC_SUBST(SD_ACTIVATE)
+else
+    AC_MSG_RESULT([(default)])
+fi
 
 TANG_CFLAGS="\
 -Wall \
@@ -61,4 +77,7 @@ TANG_CFLAGS="\
 AC_SUBST([TANG_CFLAGS])
 
 AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([test-adv], [chmod +x test-adv])
+AC_CONFIG_FILES([test-rec], [chmod +x test-rec])
+AC_CONFIG_FILES([test-nagios], [chmod +x test-nagios])
 AC_OUTPUT
