--- a/test-adv.in
+++ b/test-adv.in
@@ -28,18 +28,6 @@ function on_exit() {
 trap 'on_exit' EXIT
 trap 'exit' ERR
 
-for cmd in systemd-socket-activate \
-    `pkg-config --variable=systemdutildir systemd`/systemd-activate; do
-    if SD_ACTIVATE=`which $cmd`; then
-        if $SD_ACTIVATE --help | grep -q inetd; then
-            SD_ACTIVATE="$SD_ACTIVATE --inetd"
-        fi
-        break
-    fi
-done
-
-[ ! "$SD_ACTIVATE" ] && exit 1
-
 export TMP=`mktemp -d`
 mkdir -p $TMP/db
 mkdir -p $TMP/cache
@@ -52,7 +40,7 @@ $srcdir/tangd-update $TMP/db $TMP/cache
 
 for addr in "127.0.0.1" "[::1]"; do
   port=`shuf -i 1024-65536 -n 1`
-  $SD_ACTIVATE -l "$addr:$port" -a $VALGRIND ./tangd $TMP/cache &
+  @SD_ACTIVATE@ -l "$addr:$port" -a $VALGRIND ./tangd $TMP/cache &
   export PID=$!
 
   sleep 0.1
