--- a/test-nagios.in
+++ b/test-nagios.in
@@ -28,18 +28,6 @@ function on_exit() {
 trap 'on_exit' EXIT
 trap 'exit' ERR
 
-for cmd in systemd-socket-activate \
-    `pkg-config --variable=systemdutildir systemd`/systemd-activate; do
-    if SD_ACTIVATE=`which $cmd`; then
-        if $SD_ACTIVATE --help | grep -q inetd; then
-            SD_ACTIVATE="$SD_ACTIVATE --inetd"
-        fi
-        break
-    fi
-done
-
-[ ! "$SD_ACTIVATE" ] && exit 1
-
 export TMP=`mktemp -d`
 mkdir -p $TMP/db
 mkdir -p $TMP/cache
@@ -49,21 +37,9 @@ jose gen -t '{"alg": "ES256"}' -o $TMP/db/sig.jwk
 jose gen -t '{"kty": "EC", "crv": "P-256", "key_ops": ["deriveKey"] }' -o $TMP/db/exc.jwk
 ${srcdir}/tangd-update $TMP/db $TMP/cache
 
-# Generate the client keys
-exc_kid=`jose thp -i $TMP/db/exc.jwk`
-jose gen -t '{"kty":"EC","crv":"P-256"}' -o $TMP/exc.jwk
-jose pub -i $TMP/exc.jwk -o $TMP/exc.pub.jwk
-
 # Start the server
 port=`shuf -i 1024-65536 -n 1`
-$SD_ACTIVATE -l 127.0.0.1:$port -a $VALGRIND ./tangd $TMP/cache &
+@SD_ACTIVATE@ -l 127.0.0.1:$port -a $VALGRIND ./tangd $TMP/cache &
 export PID=$!
 
-# Make sure that GET fails
-! wget -t1 -O- http://127.0.0.1:$port/rec
-! wget -t1 -O- http://127.0.0.1:$port/rec/
-
-# Make an anon recovery request (NOTE: this is insecure! Don't do this in real code!)
-good=`jose exc -l $TMP/exc.jwk -r $TMP/db/exc.jwk`
-test=$(wget -t1 -O- --post-data="`cat $TMP/exc.pub.jwk`" http://127.0.0.1:$port/rec/${exc_kid})
-[ "$good" == "$test" ]
+./tang -u http://127.0.0.1:$port
