--- a/test-nagios.in
+++ b/test-nagios.in
@@ -42,4 +42,6 @@ port=`shuf -i 1024-65536 -n 1`
 @SD_ACTIVATE@ -l 127.0.0.1:$port -a $VALGRIND ./tangd $TMP/cache &
 export PID=$!
 
+sleep 0.5
+
 ./tang -u http://127.0.0.1:$port
